[package]
name = "multichain-relayer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# near lake dependencies
base64 = "0.21.4"
clap = { version = "4.4.4", features = ["color", "derive", "env"] }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
itertools = "0.11.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.3.17"
near-lake-framework = "0.7.3"

# alloy dependencies for EVM txn signing and sending
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }