[package]
name = "multichain-relayer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# alloy dependencies for EVM txn sending and RPC calls
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-primitives = "0.3.3"

# server dependencies
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
