[package]
name = "multichain-relayer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers dependencies for EVM txn sending and RPC calls
async-trait = "0.1.73"
ethers = "2.0.10"
ethers-core = "2.0.10"
ethers-providers = "2.0.10"
thiserror = "1.0.48"

# server dependencies
axum = "0.6.20"
lazy_static = "1.4.0"
reqwest = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hex = "0.4.3"
